# gpt-image-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PYDANTIC_ENHANCEMENTS.md  STRANDS_EXAMPLES.md  STRANDS_INTEGRATION.md
examples/: basic_usage.py  demo_creative_modes.py  generate_with_reference.py  mcp_client_config.json  reference_thumbnail_demo.py  superhero_thumbnail_test.py  test_creative_modes.py  test_reference_thumbnail.py  test_with_sample.py
examples/strands/: strands_batch_thumbnails.py  strands_blog_content.py  strands_social_media.py  strands_thumbnail_analyzer.py  strands_working_example.py  strands_youtube_thumbnail.py  test_strands_simple.py
src/gpt_image_mcp/: __init__.py  config.py  file_manager.py  image_generator.py  models.py  prompt_optimizer.py  server.py  thumbnail_analyzer.py  utils.py
src/gpt_thumbnail_mcp/: __init__.py  config.py  file_manager.py  image_generator.py  models.py  prompt_optimizer.py  server.py  thumbnail_analyzer.py  utils.py
tests/: __init__.py  test_config.py  test_image_generator.py  test_models.py  test_server.py  test_utils.py
